<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.treebolic.files.MainActivity" >

    <item
        android:id="@+id/action_query"
        android:showAsAction="never"
        android:title="@string/title_query"/>
    <item
        android:id="@+id/action_choose"
        android:showAsAction="never"
        android:title="@string/title_choose"/>
    <item
        android:id="@+id/action_demo"
        android:showAsAction="never"
        android:title="@string/title_demo"/>
    <item
        android:id="@+id/action_finish"
        android:showAsAction="never"
        android:title="@string/title_finish"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/title_settings"/>
    <item
        android:id="@+id/action_app_settings"
        android:showAsAction="never"
        android:title="@string/title_activity_app_settings"/>

</menu>